Update color of name tag to not overlap with frequency tag color (#1457)

--- a/ext/css/display.css
+++ b/ext/css/display.css
@@ -127,7 +127,7 @@
     --tag-text-color: #ffffff;
     --tag-border-color: transparent;
     --tag-default-background-color: #8a8a91;
-    --tag-name-background-color: #5cb85c;
+    --tag-name-background-color: #b6327a;
     --tag-expression-background-color: #f0ad4e;
     --tag-popular-background-color: #0275d8;
     --tag-frequent-background-color: #5bc0de;
@@ -197,7 +197,7 @@
     --tag-text-color: #f1f1f1;
     --tag-border-color: transparent;
     --tag-default-background-color: #69696e;
-    --tag-name-background-color: #489148;
+    --tag-name-background-color: #992a67;
     --tag-expression-background-color: #b07f39;
     --tag-popular-background-color: #025caa;
     --tag-frequent-background-color: #4490a7;
