Fix tag disambiguation (#1556)
* Update display generator to use new data format for tag disambiguation

* Add separator for multiple disambiguations

--- a/ext/css/display.css
+++ b/ext/css/display.css
@@ -1823,6 +1823,9 @@ button.footer-notification-close-button {
     height: calc(16em / var(--font-size-no-units));
     background-color: var(--button-content-color);
 }
+.tag-details-disambiguation-list>.tag-details-disambiguation:not(:last-child)::after {
+    content: var(--disambiguation-separator);
+}
 
 
 /* Overlays */
